; ModuleID = '/home/carl/AnghaBench/git/builtin/extr_log.c_finish_early_output.c'
source_filename = "/home/carl/AnghaBench/git/builtin/extr_log.c_finish_early_output.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rev_info = type { i32 }

@SIGALRM = common dso_local global i32 0, align 4
@SIG_IGN = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [5 x i8] c"done\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.rev_info*)* @finish_early_output to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @finish_early_output(%struct.rev_info* %0) #0 {
  %2 = alloca %struct.rev_info*, align 8
  %3 = alloca i32, align 4
  store %struct.rev_info* %0, %struct.rev_info** %2, align 8
  %4 = load %struct.rev_info*, %struct.rev_info** %2, align 8
  %5 = getelementptr inbounds %struct.rev_info, %struct.rev_info* %4, i32 0, i32 0
  %6 = load i32, i32* %5, align 4
  %7 = call i32 @estimate_commit_count(i32 %6)
  store i32 %7, i32* %3, align 4
  %8 = load i32, i32* @SIGALRM, align 4
  %9 = load i32, i32* @SIG_IGN, align 4
  %10 = call i32 @signal(i32 %8, i32 %9)
  %11 = load %struct.rev_info*, %struct.rev_info** %2, align 8
  %12 = load i32, i32* %3, align 4
  %13 = call i32 @show_early_header(%struct.rev_info* %11, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0), i32 %12)
  ret void
}

declare dso_local i32 @estimate_commit_count(i32) #1

declare dso_local i32 @signal(i32, i32) #1

declare dso_local i32 @show_early_header(%struct.rev_info*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
